improve button and font styling

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   </header>
   <main>
     <section class="no-print">
-      <label for="csv-file">Upload CSV File:</label>
-      <input type="file" id="csv-file" accept=".csv">
+      <button id="upload-btn" aria-label="Upload CSV File">Upload CSV File</button>
+      <label for="csv-file" class="hidden">Choose CSV file</label>
+      <input type="file" id="csv-file" accept=".csv" class="hidden">
     </section>
     <section id="printable">
       <button class="no-print" onclick="window.print()">Print</button>
